change package name to avoid conflict with command lc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lc"
+name = "lf"
 version = "0.1.0"
 authors = ["sleefd@gmail.com"]
 description = "locate a file in file explorer"
