--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -3,18 +3,21 @@ name: Rust CI
 on:
   push:
     branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+
+env:
+  CARGO_TERM_COLOR: always
+
+permissions:
+  contents: read
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up Rust
-        uses: actions/setup-rust@v1
-        with:
-          rust-version: stable
+      - uses: actions/checkout@v3
 
       - name: Build
         run: cargo build --verbose
