--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -14,8 +14,10 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        os: [macos-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
 
