fix: fix crate login token

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: publish package
         run: |
-          cargo login ${{ env.CRATESIO_TOKEN }}
+          cargo login ${{ secrets.CRATESIO_TOKEN }}
           cargo publish
 
       - name: release codes
